--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,7 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
